@@ -2,4 +2,6 @@
 
 === New Features
 
+* (2012-08-15) tonini: add rect-mark bundle
+
 === Bugfixes
